--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,20 @@
 
 .App-header img{
   text-align: left;
-  margin: 5px;
+  width: 10%;
+  margin: 1em;
   position: absolute;
-  left: 6em;
+  left: -1em;
+  top: -1em
 }
 
+.App-header .licence {
+  text-align: right;
+  width: 10%;
+  margin: 1em;
+  position: absolute;
+  right: 0em;
+}
 
 .App-header {
   background-color: #17346f;
